[package]
name = "rocker"
version = "0.2.5"
authors = ["Maxim Molchanov <m.molchanov@vonmo.com>"]
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
name = "rocker"
crate-type = ["dylib"]

[dependencies]
lazy_static = "1.4.0"
rustler = { git = "https://github.com/vihu/rustler.git", branch = "master" }
rocksdb = "0.14.0"
